--- a/META.yml
+++ b/META.yml
@@ -1,14 +1,17 @@
 ---
 name: Business-Travel-OTA
-version: 0.50
+version: 0.51
 author:
   - stephen.adkins@officevision.com
 abstract: Tools for handling OTA-compliant (Open Travel Alliance) messages
 license: perl
 requires:
   App::Options: 0
+  Crypt::SSLeay: 0
   Data::Dumper: 0
+  LWP::UserAgent: 0
   XML::Simple: 0
+  XML::XPath: 0
 build_requires:
   App::Build: 0
   File::Spec: 0
@@ -16,7 +19,7 @@ dynamic_config: 1
 provides:
   Business::Travel::OTA:
     file: lib/Business/Travel/OTA.pm
-    version: 0.50
+    version: 0.51
   Business::Travel::OTA::Client:
     file: lib/Business/Travel/OTA/Client.pm
     version: 1.01
