--- a/META.yml
+++ b/META.yml
@@ -1,8 +1,8 @@
 ---
 name: Business-Travel-OTA
-version: 0.51
+version: 0.52
 author:
-  - stephen.adkins@officevision.com
+  - sadkins@therubicongroup.com
 abstract: Tools for handling OTA-compliant (Open Travel Alliance) messages
 license: perl
 requires:
@@ -10,6 +10,7 @@ requires:
   Crypt::SSLeay: 0
   Data::Dumper: 0
   LWP::UserAgent: 0
+  SOAP::Lite: 0
   XML::Simple: 0
   XML::XPath: 0
 build_requires:
@@ -19,20 +20,20 @@ dynamic_config: 1
 provides:
   Business::Travel::OTA:
     file: lib/Business/Travel/OTA.pm
-    version: 0.51
+    version: 0.52
   Business::Travel::OTA::Client:
     file: lib/Business/Travel/OTA/Client.pm
-    version: 1.01
+    version: 1.02
   Business::Travel::OTA::Client::HTTP:
     file: lib/Business/Travel/OTA/Client/HTTP.pm
-    version: 1.01
+    version: 1.02
   Business::Travel::OTA::Client::Local:
     file: lib/Business/Travel/OTA/Client/Local.pm
-    version: 1.01
+    version: 1.02
   Business::Travel::OTA::Server:
     file: lib/Business/Travel/OTA/Server.pm
-    version: 1.01
+    version: 1.02
   Business::Travel::OTA::Utils:
     file: lib/Business/Travel/OTA/Utils.pm
-    version: 1.01
+    version: 1.02
 generated_by: Module::Build version 0.261
