--- a/META.yml
+++ b/META.yml
@@ -1,15 +1,12 @@
 ---
 name: Business-Travel-OTA
-version: 0.52
+version: 0.53
 author:
   - sadkins@therubicongroup.com
 abstract: Tools for handling OTA-compliant (Open Travel Alliance) messages
 license: perl
 requires:
   App::Options: 0
-  Crypt::SSLeay: 0
-  Data::Dumper: 0
-  LWP::UserAgent: 0
   SOAP::Lite: 0
   XML::Simple: 0
   XML::XPath: 0
@@ -20,7 +17,7 @@ dynamic_config: 1
 provides:
   Business::Travel::OTA:
     file: lib/Business/Travel/OTA.pm
-    version: 0.52
+    version: 0.53
   Business::Travel::OTA::Client:
     file: lib/Business/Travel/OTA/Client.pm
     version: 1.02
@@ -30,10 +27,13 @@ provides:
   Business::Travel::OTA::Client::Local:
     file: lib/Business/Travel/OTA/Client/Local.pm
     version: 1.02
+  Business::Travel::OTA::Client::SOAP:
+    file: lib/Business/Travel/OTA/Client/SOAP.pm
+    version: 1.02
   Business::Travel::OTA::Server:
     file: lib/Business/Travel/OTA/Server.pm
-    version: 1.02
+    version: 1.03
   Business::Travel::OTA::Utils:
     file: lib/Business/Travel/OTA/Utils.pm
-    version: 1.02
-generated_by: Module::Build version 0.261
+    version: 1.03
+generated_by: Module::Build version 0.2611
